--- a/index.html
+++ b/index.html
@@ -862,13 +862,13 @@
                     <div class="col l-2-4 m-8 c-12">
                         <h3 class="footer__heading">Vào cửa hàng trên ứng dụng</h3>
                         <div class="footer__dowload">
-                            <img src="/assets/img/qr_code.png" alt="Download QR" class="footer__download-qr">
+                            <img src="./assets/img/qr_code.png" alt="Download QR" class="footer__download-qr">
                             <div class="footer__dowload-apps">
                                 <a href="" class="footer__dowload-app-link">
-                                    <img src="/assets/img/google_play.png" alt="Google Play" class="footer__dowload-app-img">
+                                    <img src="./assets/img/google_play.png" alt="Google Play" class="footer__dowload-app-img">
                                 </a>
                                 <a href="" class="footer__dowload-app-link">
-                                    <img src="/assets/img/app_store.png" alt="App store" class="footer__dowload-app-img">
+                                    <img src="./assets/img/app_store.png" alt="App store" class="footer__dowload-app-img">
                                 </a>
                                
                             </div>
